tg-803 cambios ficha de internacion agregar evaluacion clinica diagnostico principal ahora es boton background color al documento activo en listado de documentos agrega archivo de traduccion para tarjeta de diagnostico principal

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -272,6 +272,12 @@
 				"ONE_DAY": "1 día internado",
 				"ADMISSION": "Ingreso: {{datetime}}"
 			},
+			"main-diagnosis": {
+				"TITLE": "Diagnóstico principal",
+				"actions": {
+					"ADD_CLINICAL_ASSESTMENT": "Agregar evaluación clínica"
+				}
+			},
 			"remove-diagnosis-dialog": {
 				"TITLE": "Eliminar diagnóstico",
 				"VERIFICATION_SELECT": "Motivo",
