tg-707 fix segun MR by Trapa

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -45,6 +45,7 @@ institution.invalid=Invalid institution
 
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
+internmentepisode.not.found=Internment does not exists
 diagnosis.mandatory=Main diagnosis mandatory
 diagnosis.main.repeated=Repeated main diagnosis
 diagnosis.secondary.repeated.principal= Diagnosis defined as principal
