--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -50,6 +50,7 @@ institution.invalid=Institución desconocida
 
 ####### Internment Episode #######
 internmentepisode.invalid=Internación desconocida
+internmentepisode.not.found=La internación no se encontró o no existe
 diagnosis.mandatory=Diagnóstico principal obligatorio
 diagnosis.main.repeated= Diagnóstico principal repetido
 diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal 
