tg-794 agrega popup para cargar signos vitales

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -15,7 +15,8 @@
 		"CONTINUE": "Continuar",
 		"CONFIRM": "Confirmar",
 		"CLOSE": "Cerrar",
-		"SEARCH": "Buscar"
+		"SEARCH": "Buscar",
+		"UPDATE": "Actualizar"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido"
