tg-839 fix mensaje de error en signos vitales
(cherry picked from commit 916268103e6667c872e0c64fbd7ae6459c0901b3)

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -338,7 +338,7 @@
 				"UPDATE": "Actualizar signos vitales",
 				"save": {
 					"SUCCESS": "Los signos vitales se actualizaron exitosamente",
-					"ERROR":  "Error al actualizar información antropométrica"
+					"ERROR":  "Error al actualizar signos vitales"
 				}
 			}
 		},
