tg-844 Refactorizacion de texto comun en documentos de internacion - PDF

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -69,6 +69,7 @@ document.update.invalid=Document update is not possible
 document.create.invalid=Internment already registered a similar document
 
 document.pdf.diagnosis.title.tandil=illnesses
+document.pdf.diagnosis.title.chaco=illnesses
 document.pdf.diagnosis.title.minsal=Diagnostics
 document.pdf.maindiagnosis.title.minsal=Main diagnosis
 
