--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -67,11 +67,12 @@ clinicalobservation.effetivetime.before.entrydate=La fecha de medición debe ser
 
 snomed.invalid=Fallo al guardar código SnomedCT
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
-snomed.pt.max.value=Los tèrminos preferidos deben contener hasta 100 caracteres
+snomed.pt.max.value=Los términos preferidos deben contener hasta 100 caracteres
 
 document.invalid=Documento desconocido
 document.update.invalid=La actualización del documento no es posible
 document.create.invalid=La internación ya registra un documento semejante
+document.pdf.diagnosis.title.chaco=Enfermedades
 document.pdf.diagnosis.title.tandil=Enfermedades
 document.pdf.diagnosis.title.minsal=Diagnósticos
 document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
