tg-854 [FE] Nuevo modulo de ambulatoria

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -2,6 +2,7 @@
 	"app": {
 		"TITLE": "Historia de salud integrada",
 		"menu": {
+			"AMBULATORIA": "HCE Ambulatoria",
 			"INSTITUCIONES": "Instituciones",
 			"INTERNACION": "HCE Internación",
 			"PACIENTES": "Pacientes",
