tg-846 implementar dialog add-vaccine

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -334,6 +334,15 @@
 				"STATUS_SELECT": "Estado clínico",
 				"CONFIRM_BUTTON": "Crear nota de evolución"
 			},
+			"vacunas-summary": {
+				"ADD": "Agregar vacuna",
+				"INMUNIZATION": "Vacuna",
+				"REGISTRY_DATE": "Fecha de vacunación",
+				"save": {
+					"SUCCESS": "Una nueva vacuna se guardó exitosamente",
+					"ERROR":  "Error al guardar nueva vacuna"
+				}
+			},
 			"vital-signs-summary": {
 				"UPDATE": "Actualizar signos vitales",
 				"save": {
