tg-850 [FE] Crear FF habilitarBotonCovidDiagnosticoPresuntivo para flavor tandil (geriatricos)

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -379,6 +379,13 @@
 				"MEDICAL_DISCHARGE_ERROR":"No se pudo dar el alta médica del paciente",
 				"MEDICAL_DISCHARGE_SUCCESS":"El alta médica se guardó exitosamente"
 			}
+		},
+		"alerta-covid": {
+			"TITLE": "Diagnóstico presuntivo Covid",
+			"messages": {
+				"ERROR": "Error al guardar diagnóstico presuntivo de Covid",
+				"SUCCESS": "El diagnóstico presuntivo de Covid se guardó exitosamente"
+			}
 		}
 	}
 }
