tg-947 crea pantalla ambulatoria-paciente con tabs

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -3,6 +3,15 @@
 		"home": {
 			"TITLE": "HCE Ambulatoria",
 			"SUBTITLE": "Complete los campos deseados"
+		},
+		"paciente": {
+			"TITLE": "HCE Ambulatoria",
+			"resumen": {
+				"TITLE": "Resumen"
+			},
+			"problemas": {
+				"TITLE": "Problemas"
+			}
 		}
 	}
 }
