tg-973 [FE] Agrega informacion de institucion al footer del sidenav

--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -12,6 +12,7 @@
 				"SUBMIT": "INGRESAR"
 			}
 		},
+		"LOGOUT": "Cerrar Sesión",
 		"password-reset": {
 			"form": {
 				"TITLE": "Definir clave",
