--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -18,7 +18,8 @@
 				"WARNING_INTERNADO": "El paciente se encuentra internado en otra institución."
 			},
 			"resumen": {
-				"TAB-LABEL": "Resumen"
+				"TAB-LABEL": "Resumen",
+				"TITLE": "Resumen de historia clínica"
 			}
 		}
 	}
