tg-1017 refactor componente vacunas-summary

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -18,7 +18,7 @@
 				"WARNING_INTERNADO": "El paciente se encuentra internado en otra institución."
 			},
 			"resumen": {
-				"TAB-LABEL": "Resumen",
+				"TAB_LABEL": "Resumen",
 				"TITLE": "Resumen de historia clínica"
 			},
 			"vacunas": {
