--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -40,8 +40,7 @@
 				"PROFESIONAL_DE_SALUD": "Profesional de la salud",
 				"ADMINISTRATIVO": "Administrativo",
 				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor",
-				"ENFERMERO": "Enfermero",
-				"ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE":  "Administrador institucional"
+				"ENFERMERO": "Enfermero"
 			}
 		}
 	}
