tg-969 add put for probable discharge date

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -55,6 +55,8 @@ anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
 internment.responsible.doctor.required=Responsable doctor mandatory
 internmentdischarge.invalid=Can't discharge an internment without an epicrisis
+patient.discharge.date=Discharge date have to be before hospitalization date 
+
 
 clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
 clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
