--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -60,6 +60,8 @@ anamnesis.exist=La internación ya contiene una anamnesis
 epicrisis.exist=La internación contiene un documento de epicrisis
 internment.responsible.doctor.required=Se debe asignar un doctor responsable de la internación
 internmentdischarge.invalid=Una internación sin epicrisis no puede darse de alta
+patient.discharge.date=La fecha de alta probable tiene que ser posterior a la fecha de internación 
+
 
 clinicalobservation.effetivetime.mandatory=Fecha de medición es obligatoria
 clinicalobservation.effetivetime.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
