tg-1046. [P1] Me deja editar la fecha cuando ya se realizo el alta médico

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -55,7 +55,8 @@ anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
 internment.responsible.doctor.required=Responsable doctor mandatory
 internmentdischarge.invalid=Can't discharge an internment without an epicrisis
-patient.discharge.date=Discharge date have to be before hospitalization date 
+patient.discharge.date.before=Probable discharge date have to be before hospitalization date 
+patient.discharge.date.invalid=Probable discharge date cannot be set when the hospitalization finished 
 
 
 clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
