--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -60,7 +60,8 @@ anamnesis.exist=La internación ya contiene una anamnesis
 epicrisis.exist=La internación contiene un documento de epicrisis
 internment.responsible.doctor.required=Se debe asignar un doctor responsable de la internación
 internmentdischarge.invalid=Una internación sin epicrisis no puede darse de alta
-patient.discharge.date=La fecha de alta probable tiene que ser posterior a la fecha de internación 
+patient.discharge.date.before=La fecha de alta probable tiene que ser posterior a la fecha de internación 
+patient.discharge.date.invalid=La fecha de alta probable no puede configurarse cuando se tiene el alta médica 
 
 
 clinicalobservation.effetivetime.mandatory=Fecha de medición es obligatoria
