tg-1078 [FE] creacion de modulo Turnos

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -6,7 +6,8 @@
 			"INSTITUCIONES": "Instituciones",
 			"INTERNACION": "HCE Internación",
 			"PACIENTES": "Pacientes",
-			"PERFIL": "Mi cuenta"
+			"PERFIL": "Mi cuenta",
+			"TURNOS": "Gestión de turnos"
 		}
 	},
 	"buttons": {
