--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -6,6 +6,9 @@
 		},
 		"paciente": {
 			"TITLE": "HCE Ambulatoria",
+			"card": {
+				"NUEVA_CONSULTA": "Nueva consulta"
+			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
 				"TITLE": "Problemas y evoluciones",
