tg-1105 agrega segundo nombre y otros apellidos a dto PatientBasicData de presentation

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -7,7 +7,9 @@
 		"paciente": {
 			"TITLE": "HCE Ambulatoria",
 			"card": {
-				"NUEVA_CONSULTA": "Nueva consulta"
+				"buttons": {
+					"NUEVA_CONSULTA": "Nueva consulta"
+				}
 			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
