tg-1112 crea componente nueva-consulta y agrega ruta /nueva en ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -11,6 +11,10 @@
 					"NUEVA_CONSULTA": "Nueva consulta"
 				}
 			},
+			"nueva-consulta": {
+				"TITLE": "Nueva consulta",
+				"SUBTITLE": "Completa los siguientes datos."
+			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
 				"TITLE": "Problemas y evoluciones",
