tg-1113 [FE] Agregar sección Motivo de consulta en Nueva Consulta - Ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -13,7 +13,11 @@
 			},
 			"nueva-consulta": {
 				"TITLE": "Nueva consulta",
-				"SUBTITLE": "Completa los siguientes datos."
+				"SUBTITLE": "Completa los siguientes datos.",
+				"motivo": {
+					"TITLE": "Motivo de consulta",
+					"MOTIVO": "motivo"
+				}
 			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
