tg-1152 [BE] validación de horarios de apertura/cierre

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -88,6 +88,10 @@ vitalsign.respiratory.rate=Respiratory rate
 vitalsign.systolic.blood.pressure=Systolic blood pressure
 vitalsign.temperature=Temperature
 
+####### Doctor's Office ########
+doctorsoffices.closingBeforeOpening=Opening time must be earlier than closing time.
+########################
+
 ####### Bed #######
 beds.existsInternmentEpisode=The bed has an internment episode and can't be marked as free.
 ########################
