tg-1075 [FE] Pantalla para generar pase de cama

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -18,7 +18,8 @@
 		"CONFIRM": "Confirmar",
 		"CLOSE": "Cerrar",
 		"SEARCH": "Buscar",
-		"UPDATE": "Actualizar"
+		"UPDATE": "Actualizar",
+		"GENERATE": "Generar"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
