--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -301,7 +301,9 @@
 				"ADD_NOTA_EVOLUCION": "Agregar nota de evolución",
 				"ADMINISTRATIVE_DISCHARGE": "Alta administrativa",
 				"MEDICAL_DISCHARGE": "Alta médica",
-				"PROBABLE_DISCHARGE": "Alta probable"
+				"PROBABLE_DISCHARGE": "Alta probable",
+				"RELOCATE_PATIENT_BED": "Generar pase de cama"
+
 			},
 			"alergias-summary": {
 				"ADD": "Agregar alergia",
@@ -393,6 +395,22 @@
 			"messages": {
 				"ERROR": "Error al guardar diagnóstico presuntivo de Covid",
 				"SUCCESS": "El diagnóstico presuntivo de Covid se guardó exitosamente"
+			}
+		},
+		"bed-relocation": {
+			"TITLE": "Generación pase de cama",
+			"SECTION_ORIGIN": "Datos cama origen",
+			"SECTION_DESTINATION": "Datos cama destino",
+			"SECTION_DATE":"Fecha de pase",
+			"form":{
+				"DESTINATION_SPECIALTY":"Servicio/Especialidad destino",
+				"ORIGIN_BED":"N° de cama origen",
+				"DESTINATION_BED":"N° de cama destino"
+			},
+			"messages": {
+				"CONFIRMACION": "¿Está seguro que desea realizar el pase de cama? ",
+				"ERROR": "Error al generar pase de cama",
+				"SUCCESS": "El pase de cama se guardó exitosamente"
 			}
 		}
 	}
