1160 [P1] [Fix] Se pueden crear consultorios con sectores que no sean de la institucion seleccionada

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -90,6 +90,7 @@ vitalsign.temperature=Temperature
 
 ####### Doctor's Office ########
 doctorsoffices.closingBeforeOpening=Opening time must be earlier than closing time.
+doctorsoffices.matchingIds: Selected Specialty | Sector does not belong to that institution"
 ########################
 
 ####### Bed #######
