--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -94,6 +94,7 @@ vitalsign.temperature=temperatura corporal
 
 ####### Doctor's Office ########
 doctorsoffices.closingBeforeOpening=La hora de apertura no puede ser posterior a la hora de cierre.
+doctorsoffices.matchingIds: La Especialidad | Sector seleccionada no pertenece a esa institución."
 ########################
 
 ####### Bed #######
