tg-1119 agrega conexion con backend para guardar nueva consulta ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -14,6 +14,10 @@
 			"nueva-consulta": {
 				"TITLE": "Nueva consulta",
 				"SUBTITLE": "Completa los siguientes datos.",
+				"evolucion": {
+					"TITLE": "Evolucion",
+					"DESCRIPCION": "Descripcion"
+				},
 				"motivo": {
 					"TITLE": "Motivo de consulta",
 					"MOTIVO": "motivo"
