tg-1203 cambia rutas de ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -31,6 +31,10 @@
 					"TABLE_TITLE": "Medicaciones registradas",
 					"TITLE": "Medicación"
 				},
+				"messages": {
+					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
+					"SUCCESS": "El documento de nueva consulta ambulatoria se guardó exitosamente"
+				},
 				"problemas": {
 					"buttons": {
 						"ADD": "Agregar problema"
