tg-1085 Nuevo servicio para creacion de Nueva agenda

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -104,3 +104,10 @@ document.pdf.maindiagnosis.title.minsal=Main diagnosis
 
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
+
+####### Diary #######
+diary.period.invalid=Invalid diary period
+diary.period.invalid.range=start date of diary have to be before end date
+diary.period.invalid.year=The period for the diary must correspond to the same calendar year
+diary.period.invalid.overlap=A similar agenda already exists defined in an overlapping period of time
+diary.attention.invalid.overlap=It is not possible to define overlapping opening hours
