--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -105,3 +105,10 @@ document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
+
+####### Diary #######
+diary.period.invalid=El periodo definido para la agenda es inválido
+diary.period.invalid.range=La fecha de comienzo de la agenda debe ser anterior a la fecha de fin
+diary.period.invalid.year=El período definido para la agenda debe corresponder al mismo año calendario
+diary.period.invalid.overlap=Ya existe una agenda similar definida en un período de tiempo superpuesto
+diary.attention.invalid.overlap=No es posible definir horarios de atención superpuestos
