--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -1,3 +1,7 @@
+#### General ####
+attribute.required=Attribute mandatory
+value.mandatory=Valor mandatory
+
 #### RequestUserDto ####
 name.mandatory=Name mandatory
 surname.mandatory=Surname mandatory
@@ -7,22 +11,22 @@ birthday.mandatory=Birthday mandatory
 invalid.gender=Invalid gender: (M)ale o (F)emale
 age.min=Age should not be less than 0
 age.max=Age should not be greater than 150
-########################
+
 
 ####### LoginDto #######
 invalid.username=Invalid username/password
 username.mandatory=Username mandatory
 password.mandatory=Password mandatory
 disabled.user=Disabled or non-existent account
-########################
+
 
 #### Reset password #####
 invalid.iduser=Id user invalid
-######################## 
+
 
 ####### Token ##########
 jwt.invalid=Invalid token
-########################
+
 
 ####### Role #######
 userid.mandatory=User id mandatory
@@ -31,7 +35,7 @@ role.invalid=Role id invalid
 role.min.value=Id role has to be greater than 1
 invalid.user=User invalid
 role-level.institution.required=Role requires an institution
-########################
+
 
 ####### Patient #######
 patient.invalid=Invalid patient
@@ -42,6 +46,17 @@ person.invalid=Invalid person
 
 ####### Institution #######
 institution.invalid=Invalid institution
+
+
+####### Clinical history #######
+clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
+clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
+clinicalobservation.effetivetime.before.entrydate=Measurement datetime have to be after internment entry date
+
+snomed.invalid=Save SnomedCT code failed
+snomed.id.max.value=Sctid must be 20 characters long
+snomed.pt.max.value=Preferred term must be 100 characters long
+
 
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
@@ -58,26 +73,6 @@ internmentdischarge.invalid=Can't discharge an internment without an epicrisis
 patient.discharge.date.before=Probable discharge date have to be before hospitalization date 
 patient.discharge.date.invalid=Probable discharge date cannot be set when the hospitalization finished 
 
-
-clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
-clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
-clinicalobservation.effetivetime.before.entrydate=Measurement datetime have to be after internment entry date
-
-snomed.invalid=Save SnomedCT code failed
-snomed.id.max.value=Sctid must be 20 characters long
-snomed.pt.max.value=Preferred term must be 100 characters long
-
-document.invalid=Invalid document
-document.update.invalid=Document update is not possible
-document.create.invalid=Internment already registered a similar document
-
-document.pdf.diagnosis.title.tandil=illnesses
-document.pdf.diagnosis.title.chaco=illnesses
-document.pdf.diagnosis.title.minsal=Diagnostics
-document.pdf.maindiagnosis.title.minsal=Main diagnosis
-
-value.mandatory=Valor mandatory
-
 epicrisis.document.create.invalid=Anamnesis and evolution note required to create an epicrisis
 
 ####### Vital signs #######
@@ -90,11 +85,22 @@ vitalsign.temperature=Temperature
 
 ####### Doctor's Office ########
 doctorsoffices.closingBeforeOpening=Opening time must be earlier than closing time.
-doctorsoffices.matchingIds: Selected Specialty | Sector does not belong to that institution"
-########################
+doctorsoffices.matchingIds= Selected Specialty | Sector does not belong to that institution"
+
 
 ####### Bed #######
 beds.existsInternmentEpisode=The bed has an internment episode and can't be marked as free.
-########################
 
-attribute.required=Attribute mandatory
+####### Documents #######
+document.invalid=Invalid document
+document.update.invalid=Document update is not possible
+document.create.invalid=Internment already registered a similar document
+
+document.pdf.diagnosis.title.tandil=illnesses
+document.pdf.diagnosis.title.chaco=illnesses
+document.pdf.diagnosis.title.minsal=Diagnostics
+document.pdf.maindiagnosis.title.minsal=Main diagnosis
+
+
+####### Outpatient #######
+problem.dates.not.after= End date cannot be before of start date
