tg-1208 fix error 500 al confirmar consulta sin motivo

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -18,6 +18,9 @@
 					"TITLE": "Evolucion",
 					"DESCRIPCION": "Descripcion"
 				},
+				"errors": {
+					"MOTIVO_OBLIGATORIO": "Motivo de consulta obligatorio"
+				},
 				"motivo": {
 					"TITLE": "Motivo de consulta",
 					"MOTIVO": "motivo"
