tg-1080 [FE] Calendario en pantalla de nueva agenda

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -8,7 +8,12 @@
 		},
 		"new-agenda": {
 			"TITLE": "Nueva agenda",
-			"CONFIRM": "¿Desea confirmar la creación de esta nueva agenda?"
+			"CONFIRM": "¿Desea confirmar la creación de esta nueva agenda?",
+			"OVERTURN_COUNT":" Cantidad de sobreturnos",
+			"MEDICAL_ATTENTION_TYPE" : "Tipo de atención",
+			"dialog": {
+				"TITLE":"Nueva atención"
+			}
 		}
 	}
 }
