--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -44,6 +44,9 @@
 					},
 					"CONCEPT_LABEL": "Problema",
 					"CRONICO": "Crónico",
+					"errors": {
+						"FECHA_FIN_MIN": "La fecha de fin no puede ser anterior a la fecha de inicio"
+					},
 					"FECHA_FIN": "Fecha fin",
 					"FECHA_INICIO": "Fecha inicio",
 					"PROBLEMA": "Problema",
