--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -31,7 +31,8 @@
 		"MAX_ERROR": "El valor no puede ser mayor que {{max}}",
 		"MIN_TIME_ERROR": "La hora debe ser posterior a la hora: {{minTime}}",
 		"MAX_TIME_ERROR": "La hora debe ser anterior a la hora actual",
-		"TIME_FORMAT":"La hora debe cumplir con el formato de 24 hs y tener dos digitos para la hora y los minutos respectivamente"
+		"TIME_FORMAT":"La hora debe cumplir con el formato de 24 hs y tener dos digitos para la hora y los minutos respectivamente",
+		"MAX_DATE_TODAY": "La fecha no puede ser posterior al día de hoy"
 	},
 	"messages": {
 		"NO_DATA": "No hay información para mostrar"
