tg-959 [FE] Validar caracteres minimos busqueda snomed

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -24,6 +24,7 @@
 	"forms": {
 		"REQUIRED": "El campo es requerido",
 		"MAX_LENGTH_ERROR": "Introduzca como máximo {{max}} caracteres",
+		"MIN_LENGTH_ERROR": "Debe ingresar al menos {{minLength}} caracteres",
 		"INVALID_DATE": "La fecha ingresada no es válida",
 		"REQUIRING_FIELD_FOR_SEARCH":"Debe ingresar al menos un campo para la búsqueda",
 		"SEARCH_RESULTS": "Resultados de la búsqueda",
