tg-1265 Conectar con servicio de creacion de agenda

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -15,6 +15,9 @@
 			"MEDICAL_ATTENTION_TYPE" : "Tipo de atención",
 			"dialog": {
 				"TITLE":"Nueva atención"
+			},
+			"messages": {
+				"SUCCESS": "La agenda se guardó exitosamente"
 			}
 		}
 	}
