tg-1257 agrega busqueda de profesionales en encabezado

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -2,8 +2,10 @@
 	"turnos": {
 		"home": {
 			"TITLE": "Gestión de turnos",
-			"buttons": {
-				"NEW_AGENDA": "Nueva agenda"
+			"actions": {
+				"APPLY_FOR": "Solicitar",
+				"NEW_AGENDA": "Nueva agenda",
+				"SEARCH": "Buscar profesional"
 			}
 		},
 		"new-agenda": {
