--- a/front-end/webapp/src/assets/i18n/camas/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/camas/es-AR.json
@@ -2,18 +2,26 @@
     "gestion-camas": {
         "home": {
             "TITLE": "Gestión de camas",
-            "SUBTITLE": "Disponibilidad de camas"
+            "SUBTITLE": "Disponibilidad de camas",
+            "NO_FILTERED_BEDS": "No hay resultados para la búsqueda seleccionada"
         },
         "detail": {
             "TITLE": "Detalle de cama",
-            "BED_TITLE":"Cama {{bedNumber}}",
+            "BED_TITLE": "Cama {{bedNumber}}",
             "NO_BED": "Seleccione una cama para ver el detalle",
             "SPECIALTY": "Especialidad",
-            "SECTOR":"Sector",
-            "ROOM":"Habitación:",
+            "SECTOR": "Sector",
+            "ROOM": "Habitación:",
             "PATIENT": "Paciente:",
-            "PROBABLE_DISCHARGE_DATE": "Fecha probable alta: ",
-            "NO_DISCHARGE_DATE":"Sin información"
+            "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable: ",
+            "NO_DISCHARGE_DATE": "Sin información"
+        },
+        "filters": {
+            "FREE_BEDS": "Ver camas ocupadas",
+            "SECTOR": "Sector",
+            "SPECIALITY": "Especialidad",
+            "BED_CATEGORY": "Categoría",
+            "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable"
         }
     }
 }
